force-app/main/default/objects/RoundRobinAssignment__c/RoundRobinAssignment__c.object-meta.xml
<CustomObject>
    <label>Round Robin Assignment</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Round Robin Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>