force-app/main/default/objects/RoundRobinAssignment__c/fields/LastAssignedUser__c.field-meta.xml
<CustomField>
    <fullName>LastAssignedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store last assigned user in each Queue</description>
    <label>Last Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RoundRobinAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>