force-app/main/default/objects/RoundRobinAssignment__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Store Queue name which own Lead assigning to each member in Queue</description>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>